examples/negative/name_errors/L4/8_duplicate_records.ob
MODULE DupRecords;

TYPE RecordTest = RECORD
       foo: INTEGER;
       bar: BOOLEAN
     END;

     RecordTest = RECORD
       foo: INTEGER;
       bar: BOOLEAN
     END;

VAR r: RecordTest;

END DupRecords.
